--- a/web/core/aboutme.html
+++ b/web/core/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Huan's Resume</title>
+	<title>Huan'ss Resume</title>
 	<meta id="page_info" product_count="0"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
